--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "qr-checkin-ui",
-  "private": true,
+  "author": "Shriram Khandbahale <shriramskhandbahale@gmail.com> (https://github.com/ShriramKhandbahale)",
+  "license": "MIT",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -10,18 +11,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/vite": "^4.1.0",
+    "@tanstack/react-query": "^5.71.10",
+    "@yudiel/react-qr-scanner": "^2.2.1",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "dayjs": "^1.11.13",
+    "framer-motion": "^12.6.3",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.487.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-form-stepper": "^2.0.3",
+    "react-router-dom": "^7.5.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.1.0",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/axios": "^0.14.4",
     "@types/node": "^22.13.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
